crates/ruff_linter/src/rules/flake8_logging_format/snapshots/ruff_linter__rules__flake8_logging_format__tests__G202.py.snap
---
source: crates/ruff_linter/src/rules/flake8_logging_format/mod.rs
---
G202.py:8:38: G202 (logging-redundant-exc-info) Logging statement has redundant `exc_info`
   |
 6 |     pass
 7 | except:
 8 |     logging.exception("Hello World", exc_info=True)
   |                                      ^^^^^^^^^^^^^ G202 (logging-redundant-exc-info)
 9 |
10 | try:
   |

G202.py:13:38: G202 (logging-redundant-exc-info) Logging statement has redundant `exc_info`
   |
11 |     pass
12 | except:
13 |     logging.exception("Hello World", exc_info=sys.exc_info())
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^ G202 (logging-redundant-exc-info)
14 |
15 | # OK
   |

G202.py:28:30: G202 (logging-redundant-exc-info) Logging statement has redundant `exc_info`
   |
26 |     pass
27 | except:
28 |     exception("Hello World", exc_info=True)
   |                              ^^^^^^^^^^^^^ G202 (logging-redundant-exc-info)
29 |
30 | try:
   |

G202.py:33:30: G202 (logging-redundant-exc-info) Logging statement has redundant `exc_info`
   |
31 |     pass
32 | except:
33 |     exception("Hello World", exc_info=sys.exc_info())
   |                              ^^^^^^^^^^^^^^^^^^^^^^^ G202 (logging-redundant-exc-info)
34 |
35 | # OK
   |
